# ness-poc

./: .gitignore  .travis.yml  LICENSE  batch.sh  gene-list-walk-array.sh  gene-list-walk.sh  makefile  readme  readme.rst  sample-walk-bp.sh  sample-walk-cc.sh  stack.yaml  walker.cabal
app/: Main.hs
csrc/: main.c  makefile  walk.c  walk.h
geneweaver/src/: db.py  graph.py  source.py
geneweaver/tests/: test_graph.py
src/: Entity.hs  File.hs  Graph.hs  Graph2.hs  Graphs.hs  Similarity.hs  Types.hs  Utility.hs  Walk.hs  Walk2.hs  WalkFFI.hs
walk/: main.c  main.cpp  makefile  readme.rst  walk.c  walk.cpp  walk.h
walk/tests/: test-walk.sh
walk/tests/data/: sample-graph-result.tsv  sample-graph.al  sample-graph.em  sample-graph.mat
