name:                walker
version:             0.1.0
-- synopsis:
-- description:
-- homepage:
-- license:             BSD3
-- license-file:        LICENSE
author:              TR
maintainer:          tim@fin0c.net
copyright:           2017 TR
category:            Bioinformatics
build-type:          Simple
extra-source-files:  readme
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall 
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmissing-import-lists
                       -fdiagnostics-color=always
                       -O3
  exposed-modules:     File
                     , Entity
                     , Graph
                     , Types
                     , WalkFFI
                     , Utility
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , vector
  default-language:    Haskell2010
  extra-libraries:     walk

executable walker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall 
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wmissing-import-lists
                       -fdiagnostics-color=always
                       -rtsopts
                       -with-rtsopts=-N
                       -threaded
                       -O3
  build-depends:       base
                     , bytestring
                     , containers
                     , cmdargs
                     , deepseq
                     , gitrev
                     , random
                     , random-shuffle
                     , split
                     , time
                     , vector
                     , walker
  default-language:    Haskell2010

test-suite walker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , walker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/walker

